--- a/media/index.html
+++ b/media/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+   
+   
+    <header id="main-header" class="main-header">
+    <nav class="nav container">
+        <a href="#" class="title">Mac mini</a>
+        <ul id= "main-menu"  class="main-menu">
+        <li class="item">
+        <a href="#" class="link">Descripción></a>  
+        </li>
+        <li class="item">
+         <a href="#" class="link">Por que la mac </a>
+        </li>
+        <li class="item">
+            <a href="#" class="link">Especificaciones</a>>
+        </li>
+        </ul>
+        <a href="#" class="button"></a>
+    </nav>
+   </header>
 </body>
 </html>
